--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,7 +1,7 @@
 @import "mocha.css";
 
 * {
-  font-family: JetBrainsMonoNL Nerd Font;
+  font-family: JetBrainsMono NF;
   font-size: 14px;
   font-weight: 800;
 }
