docs: reorganize tmux and neovim keybindings, fix CSS overview-table and update screenshots

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -106,8 +106,8 @@ a.nova-link-button {
 }
 
 .overview-table {
-    width: 100%;
-    overflow-x: auto;
+  width: 100%;
+  overflow-x: auto;
 }
 
 .overview-table table {
@@ -152,7 +152,7 @@ a.nova-link-button {
   width: 30%;
 }
 
-.overview-table td:last-child {
+.overview-table td:not(:first-child) {
   color: var(--sl-color-white);
 }
 
